<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>octomap_builder</name>
  <version>0.0.0</version>
  <description>Octomap utilities for multi-vehicle swarm simulation.</description>
  <maintainer email="HAMMADIQBAL12@GMAIL.COM">luqman</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Package dependencies -->
  <depend>rclcpp</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>

  <exec_depend>octomap_server</exec_depend>

  <!-- Test deps (unchanged) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
